--- a/BeautyZoneWeb/BeautyZone/BeautyZone.csproj
+++ b/BeautyZoneWeb/BeautyZone/BeautyZone.csproj
@@ -8,6 +8,10 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.22" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.22">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Scalar.AspNetCore" Version="2.10.3" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
       <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="8.1.4" />
