--- a/BeautyZoneWeb/DataAccess/DataAccess.csproj
+++ b/BeautyZoneWeb/DataAccess/DataAccess.csproj
@@ -8,7 +8,16 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.22" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.22">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.22" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.22" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.22">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="8.1.4" />
