--- a/BeautyZoneWeb/BusinessLogic/BusinessLogic.csproj
+++ b/BeautyZoneWeb/BusinessLogic/BusinessLogic.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="12.1.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.22" />
+    </ItemGroup>
+
 </Project>
