--- a/BeautyZoneWeb/BeautyZone/appsettings.json
+++ b/BeautyZoneWeb/BeautyZone/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5433;Database=beautyzone;Username=postgres;Password=password"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AuthSettings" : {
+    "SecretKey": "secretkeyu5Y1c4xMZ7jBfP7d4h5z2q9i0lS7tO6vW1dT9h3X9mU=",
+    "Expires": "00:10:00"
+  }
 }
