--- a/BeautyZoneWeb/BusinessLogic/BusinessLogic.csproj
+++ b/BeautyZoneWeb/BusinessLogic/BusinessLogic.csproj
@@ -12,6 +12,10 @@
 
     <ItemGroup>
       <PackageReference Include="FluentValidation" Version="12.1.1" />
+      <PackageReference Include="iCloud.Dav.Auth" Version="3.2.0.1" />
+      <PackageReference Include="iCloud.Dav.Calendar" Version="3.2.0.1" />
+      <PackageReference Include="iCloud.Dav.Core" Version="3.2.0.1" />
+      <PackageReference Include="iCloud.Dav.People" Version="3.2.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.22" />
     </ItemGroup>
 
