--- a/BeautyZoneWeb/BeautyZoneTests/BeautyZoneTests.csproj
+++ b/BeautyZoneWeb/BeautyZoneTests/BeautyZoneTests.csproj
@@ -12,7 +12,9 @@
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="FluentAssertions" Version="8.8.0" />
+        <PackageReference Include="FluentValidation" Version="12.1.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+        <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="4.9.0" />
         <PackageReference Include="xunit" Version="2.5.3"/>
@@ -24,11 +26,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
       <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="ServicesTests\" />
     </ItemGroup>
 
 </Project>
