refactor: update migrations

--- a/BeautyZoneWeb/BeautyZone/appsettings.json
+++ b/BeautyZoneWeb/BeautyZone/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5433;Database=beautyzone;Username=postgres;Password=password"
+    "DefaultConnection": "Host=ep-lively-snow-a94k8j0o-pooler.gwc.azure.neon.tech; Database=neondb; Username=neondb_owner; Password=npg_H09dgvZSaOoD; SSL Mode=VerifyFull; Channel Binding=Require;"
   },
   "AllowedHosts": "*",
   "AuthSettings" : {
