--- a/BeautyZoneWeb/BeautyZone/Properties/launchSettings.json
+++ b/BeautyZoneWeb/BeautyZone/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:7918",
+      "applicationUrl": "http://0.0.0.0:5220",
       "sslPort": 44353
     }
   },
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5220",
+      "applicationUrl": "http://0.0.0.0:5220",
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -23,7 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7191;http://localhost:5220",
+      "applicationUrl": "http://0.0.0.0:5220",
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
