refactor: update beauty tech controller

--- a/BeautyZoneWeb/BeautyZone/appsettings.json
+++ b/BeautyZoneWeb/BeautyZone/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=ep-lively-snow-a94k8j0o-pooler.gwc.azure.neon.tech; Database=neondb; Username=neondb_owner; Password=npg_H09dgvZSaOoD; SSL Mode=VerifyFull; Channel Binding=Require;"
+    "DefaultConnection": "Host=ep-soft-breeze-a1yox6xf-pooler.ap-southeast-1.aws.neon.tech; Database=neondb; Username=neondb_owner; Password=npg_O0Cn7oEHtSaN; SSL Mode=VerifyFull; Channel Binding=Require;"
   },
   "AllowedHosts": "*",
   "AuthSettings" : {
